--- a/.env
+++ b/.env
@@ -17,10 +17,19 @@
 # };
 
 
-REACT_APP_FIREBASE_API_KEY="AIzaSyD7U_M5C9VfnthS3JqB9kdlZogCam623UU"
-REACT_APP_FIREBASE_AUTH_DOMAIN="envirescue-23e34.firebaseapp.com"
-REACT_APP_FIREBASE_PROJECT_ID="envirescue-23e34"
-REACT_APP_FIREBASE_STORAGE_BUCKET="envirescue-23e34.appspot.com"
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID="228912689223"
-REACT_APP_FIREBASE_APP_ID="1:228912689223:web:8de36603d4fa031b678162"
-REACT_APP_FIREBASE_MEASUREMENT_ID="G-2DGNB5V1Q4"
+# REACT_APP_FIREBASE_API_KEY="AIzaSyD7U_M5C9VfnthS3JqB9kdlZogCam623UU"
+# REACT_APP_FIREBASE_AUTH_DOMAIN="envirescue-23e34.firebaseapp.com"
+# REACT_APP_FIREBASE_PROJECT_ID="envirescue-23e34"
+# REACT_APP_FIREBASE_STORAGE_BUCKET="envirescue-23e34.appspot.com"
+# REACT_APP_FIREBASE_MESSAGING_SENDER_ID="228912689223"
+# REACT_APP_FIREBASE_APP_ID="1:228912689223:web:8de36603d4fa031b678162"
+# REACT_APP_FIREBASE_MEASUREMENT_ID="G-2DGNB5V1Q4"
+
+
+VITE_REACT_APP_FIREBASE_API_KEY="AIzaSyD7U_M5C9VfnthS3JqB9kdlZogCam623UU"
+VITE_REACT_APP_FIREBASE_AUTH_DOMAIN="envirescue-23e34.firebaseapp.com"
+VITE_REACT_APP_FIREBASE_PROJECT_ID="envirescue-23e34"
+VITE_REACT_APP_FIREBASE_STORAGE_BUCKET="envirescue-23e34.appspot.com"
+VITE_REACT_APP_FIREBASE_MESSAGING_SENDER_ID="228912689223"
+VITE_REACT_APP_FIREBASE_APP_ID="1:228912689223:web:8de36603d4fa031b678162"
+VITE_REACT_APP_FIREBASE_MEASUREMENT_ID="G-2DGNB5V1Q4"
