--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@chatscope/chat-ui-kit-react": "^1.10.1",
     "@firebase/firestore": "^4.4.0",
     "dotenv": "^16.3.1",
+    "face-api.js": "^0.22.2",
     "firebase": "^10.7.1",
     "openai": "^4.20.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-speech-recognition": "^3.10.0",
     "regenerator-runtime": "^0.14.0",
     "uuid": "^9.0.1"
