--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^1.10.1",
     "@firebase/firestore": "^4.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "dotenv": "^16.3.1",
     "face-api.js": "^0.22.2",
     "firebase": "^10.7.1",
@@ -19,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-router-dom": "^6.21.1",
     "react-speech-recognition": "^3.10.0",
     "regenerator-runtime": "^0.14.0",
     "uuid": "^9.0.1"
