--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-player": "^2.14.1",
     "react-router-dom": "^6.21.1",
     "react-speech-recognition": "^3.10.0",
+    "react-youtube": "^10.1.0",
     "regenerator-runtime": "^0.14.0",
     "uuid": "^9.0.1"
   },
